k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecounted
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubecounted
  template:
    metadata:
      labels:
        app: kubecounted
    spec:
      containers:
        - name: kubecounted
          image: kubecounted
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
