k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecounted
  labels:
    app: kubecounted
spec:
  type: NodePort
  selector:
    app: kubecounted
  ports:
    - port: 3000
      targetPort: 3000
      name: web
