k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecounted-ingress
spec:
  rules:
    - host: hit-counter.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: kubecounted
                port:
                  number: 3000
    - host: hello.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: hello 
                port:
                  number: 80
